--- a/DayOfChoice/GoogleService-Info.plist
+++ b/DayOfChoice/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ito.taiga.DayOfChoice</string>
+	<string>com.taiga.DayOfChoice</string>
 	<key>PROJECT_ID</key>
 	<string>dayofchoice-c1b2a</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:137083241687:ios:778efa6def5a61afdadc92</string>
+	<string>1:137083241687:ios:e84bf29801d77c5ddadc92</string>
 </dict>
 </plist>
